--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ body {
     overflow: hidden;
     height: 100vh;
     justify-content: center;
-    background-image: url('https://cdn.nest.rip/uploads/36094eb2-b29e-435d-82b0-d8b4d7a1f198.jpg') no-repeat;
+    background-image: url('background.jpg');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 @keyframes scaleAnimation {
