--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     overflow: hidden;
     height: 100vh;
     justify-content: center;
-    background-image: url('background.jpg');
+    background-image: url(./background.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
